# hack-week

./: .gitignore  LICENSE.md  README.md  alfven_speed.py  apt.txt  environment.yml  pyproject.toml  runtime.txt  setup.cfg
docs/: bibliography.bib  conf.py  credits.rst  glossary.rst  index.rst
docs/api_static/: hack.Buchsbaum_frequency.rst  hack.rst
docs/formulary/: gyro_freq.py  index.rst
hack/: Alfven_speed.py  Buchsbaum_frequency.py  Lundau_Length.py  Thomas_Fermi_ionisation.py  __init__.py  add_Debye_length.py  add_de_Broglie_wavelength.py  alfven_speed.py  lengths.py  lundquist_number.py  mag_probe_module.py  tmp8tdt783i
hack/Alfven/: alfven_speed.py
hack/Frequency/: diocotron_frequency.py  frequencies.py
hack/Ionisation/: Thomas_Fermi_ionisation.py
hack/LIHEDP_notebooks/: Airy.ipynb  Assignment_answers.ipynb  E_Fermi.ipynb  Inverse_Bremsstrahlung.ipynb  Res_absorption.ipynb  Saha_first_impressions.ipynb  Thomas_Fermi.ipynb  critical density.ipynb
hack/Length/: gyroradius.py
notebooks/: plasmapy_demo.ipynb  proton_radiography.ipynb
requirements/: docs.txt  environment.yml  extras.txt  install.txt  tests.txt
resources/: 2022HW_dive_into_plasmapy.ipynb  2022HW_dive_into_plasmapy_completed.ipynb  2022HW_python_pypi_pip.md  README.md  ide_pycharm.md  ide_spyder.md  ide_vscode.md  plasmapy_demo_completed.ipynb  terminals_windows.md  unix_shell.md  virtual_environments.md
tutorials_and_notebooks/: BOUT++_demo.ipynb  Getting_started_with_PlasmaPy.ipynb  PlasmaPy_tutorial_notebook.ipynb  README.md  SunPy_Overview.ipynb  contributing_to_open_source_projects.rst  virtual_environments_tutorial.md
tutorials_and_notebooks/gkeyll_tutorial/: g1-2x2v-oblique-mode.lua  g2-2x2x-oblique-mode.lua  g2-extended-2x2v-oblique-mode.lua
