[build-system]
requires = ["setuptools >= 41.2",
            "setuptools_scm",
            "wheel >= 0.29.0"]  # ought to mirror 'requirements/build.txt'
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 88
wrap_length = 80
sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["hack", ]
default_section = "STDLIB"
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
force_alphabetical_sort_within_sections = true
honor_noqa = true
lines_between_types = 1
